--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li>{{item}}</li>
     {{/each}}
     </ul>
+	<p>HALP!!!!</p>
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
